tests/error/type_match/base_case_array_to_slice_const_propagation2.bz
// error: unable to match type '*int32' to '*const int32'
// note: mismatched const qualification of types 'int32' and 'const int32'
// note: while matching expression of type '[1: *int32]' to '[: *const int32]'
function test()
{
	let i = 0;
	let arr: [1: *int32] = [ &i ];
	let _: [: *const int32] = arr;
}
